tests/errors/E009.zen
void main() {
    let variable : bool = 4;            // E009: Type mismatch in variable declaration
    let array : bool[3] = {1, 2, 3};    // E009: Type mismatch in variable declaration
}